css/base.css
a {
    color: #0078b5;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

p {
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    hyphens: auto;
    word-wrap: break-word;
}

/* Font Squirrel */
@font-face {
    font-family: 'LatinModernSans10Regular';
    src: url('lmsans10-regular-webfont.eot');
    src: url('lmsans10-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('lmsans10-regular-webfont.woff') format('woff'),
         url('lmsans10-regular-webfont.ttf') format('truetype'),
         url('lmsans10-regular-webfont.svg#LatinModernSans10Regular') format('svg');
    font-weight: normal;
    font-style: normal;

}

h1, h2 {
    font: 'LatinModernSans10Regular', Arial, sans-serif;
}

dl {
    margin: 0;
}

dt, dd, footer {
    font-size: 13px;
    line-height: 18px;
}

footer a {
    color: #fdfeff;
}

.col {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding-left: 2em;
    padding-right: 2em;
}

.right {
    float: right;
}

.left {
    float: left;
}

.figure {
    margin: 0.5em;
}

.figure .caption {
    text-align: center;
}

footer h3 {
    font-size: 1em;
    color: #ccc;
}

footer .logo {
    text-align: center;
    padding: 0.5em;
}

body {
    background: gray;
    margin-bottom: 2em;
    margin-top: 2em;
    background-image: url("../images/cubes.png");
}

body > .container {
    padding: 0;

    -moz-box-shadow: 0 0 3px 3px rgba(211, 211, 211, 0.5);
    -webkit-box-shadow: 0 0 3px 3px rgba(211, 211, 211, 0.5);
    box-shadow: 0 0 3px 3px rgba(211, 211, 211, 0.5);

    background: white;
    background-image: url("../images/egg_shell.png");

    -moz-border-radius: 15px;
    border-radius: 15px;
}

.hero-unit {
    margin-bottom: 1em;
    padding: 0;
    -moz-border-radius: 15px 15px 0 0;
    border-radius: 15px 15px 0 0;
    background-image: url("../images/tube.jpg"); /* http://www.flickr.com/photos/13522901@N00/6945360545/*/
}

#siteHeader {
    padding-top: 3em;
    padding-bottom: 2em;
    margin-left: 4em;
    overflow: auto;
}

#siteLogo {
    float: left;
}

#siteInfo {
    float: left;
    margin-left: 2em;
}

.teaser {
    font-weight: bold;
}

.motto {
    margin: 0;
    float: right;
}

footer {
    margin-top: 1em;
    padding: 1em;
    -moz-border-radius: 0 0 15px 15px;
    border-radius: 0 0 15px 15px;
    color: #ccc;
}

#attributions {
    margin-top: 1em;
}

.navi {
    overflow: auto;
    width: 100%;
    padding: 0.5em 0em 0.5em 0em;
    margin: 0;
    list-style: none;
    font-size: medium;
}

.navi {
    opacity: 0.8;
}

.navi ul {
    float: left;
    margin: 0;
}

.formembers {
    float: right;
    margin-right: 1em;
}

.subnavi {
    opacity: 1.0;
}

.navi .selected {
    font-weight: bold;
}

.navi li {
    padding: 0em 2em 0em 2em;
    display: inline;
    border-right: 1px solid #CCC;
}

.navi, .navi li, footer {
    background: rgb(63, 51, 51);
}

.subnavi li {
    border-right: 1px dotted #CCC;
}

.navi li:last-child {
    border-right: none;
}

.navi a {
    color: #ccc;
}

footer .contact {
    float: right;
    text-align: center;
}

@media (max-width: 768px) {
    .container {
        padding: 0;
    }

    body {
        margin: 0;
    }
}

#overlay {
    position: fixed;
    height: 100%;
    width: 100%;
    left: 0;
    top: 0;
    z-index: 1;
    background-color: black;
    opacity: 0.2;
}

.full .close {
    float: right;
    background-image: url("../images/close.png"); /* from glyphicons */
    width: 26px;
    height: 26px;
}

.hero-unit h1 {
    margin-top: 0;
}

@media (max-width: 480px) {
    #siteHeader {
        margin-left: 2em;
    }

    #siteInfo {
        margin-left: 0;
    }

    .navi li {
        padding: 0em 1em 0em 1em;
    }

    .hero-unit {
        background-repeat: no-repeat;
        background-position: -400px 60px;
    }
}

